--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,14 @@
             android:value="edu.uark.uarkregisterapp.LandingActivity" />
         </activity>
         <activity
+            android:name=".ReportCashierActivity"
+            android:label="Cashier Sales Report"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="edu.uark.uarkregisterapp.LandingActivity" />
+        </activity>
+        <activity
             android:name=".ItemViewActivity"
             android:label="@string/title_activity_item_view"
             android:theme="@style/AppTheme.NoActionBar" />
