--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,10 @@
             android:label="@string/title_activity_product_view"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
+            android:name=".ReceiptActivity"
+            android:label="Receipt"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
             android:name=".ReportProductsActivity"
             android:label="Product Sales Report"
             android:theme="@style/AppTheme.NoActionBar">
